supporting for jai-workflow modules